@@ -1,8 +1,8 @@
 Package: DiffBind
 Type: Package
-Version: 1.12.0
+Version: 1.12.1
 Title: Differential Binding Analysis of ChIP-Seq peak data
-Date: 2014-07-16
+Date: 2014-1-27
 Author: Rory Stark<rory.stark@cruk.cam.ac.uk>, Gordon Brown
         <gordon.brown@cruk.cam.ac.uk>
 Maintainer: Rory Stark<rory.stark@cruk.cam.ac.uk>
@@ -13,7 +13,7 @@ License: Artistic-2.0
 LazyLoad: yes
 Depends: R (>= 2.15.0), GenomicRanges, limma, GenomicAlignments
 Imports: RColorBrewer, amap, edgeR (>= 2.3.58), gplots, grDevices,
-        stats, utils, IRanges, zlibbioc, lattice
+        stats, utils, IRanges, zlibbioc, lattice, S4Vectors
 Suggests: DESeq, Rsamtools, DESeq2, BiocStyle
 Enhances: rgl, parallel, BiocParallel
 LinkingTo: Rsamtools
